# fold

./: .dockerignore  .env  .gitignore  ARCHITECTURE.md  ARCHIVE_PROCESSING_OPTIMIZATION.md  AT_SCALE_GUIDANCE.md  BENCHMARK_RESULTS.md  CHECKPOINT_DESIGN.md  CLOUD_MIGRATION_PLAN.md  CODE_OPTIMIZATIONS.md  Cargo.toml  DETAILED_BENCHMARK_RESULTS.md  DISK_BACKED_QUEUE_DESIGN.md  Dockerfile  Dockerfile.feeder  Dockerfile.fold  Dockerfile.fold_worker  Dockerfile.follower  Dockerfile.ingestor  EXECUTIVE_SUMMARY.md  FINAL_OPTIMIZATION_RESULTS.md  GENERATION_STORE_BENCHMARKS.md  HIERARCHICAL_PROCESSING_ANALYSIS.md  ID_STRATEGY_OPTIMIZATION.md  MEMORY_ANALYSIS.md  MEMORY_OPTIMIZATION.md  MULTITHREADING.md  Makefile  OPTIMIZATION_RESULTS.md  ORTHO_REMAPPING_OPTIMIZATION.md  PATH_INDEPENDENCE_FIX.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_IMPROVEMENTS.md  PROFILING_SUMMARY.md  README.md  SEEN_TRACKER_DESIGN.md  SIMPLIFICATION_SUMMARY.md  SINGLE_NODE.md  SPEED_ANALYSIS.md  build-deploy.sh  (+31 more)
.github/: copilot-instructions.md
benches/: README.md  checkpoint_detail_bench.rs  checkpoint_manager_bench.rs  disk_backed_queue_bench.rs  disk_queue_bench.rs  end_to_end_bench.rs  expansion_detail_bench.rs  generation_store_bench.rs  id_strategy_bench.rs  impacted_ortho_bench.rs  interner_bench.rs  main_loop_bench.rs  memory_config_bench.rs  ortho_bench.rs  parallel_bench.rs  search_pipeline_bench.rs  seen_tracker_bench.rs  spatial_bench.rs  splitter_bench.rs
examples/: backtracking_demo.rs
fold_state/: checkpoint.json
k8s/: README.md  feeder-deployment.yaml  fold-feeder-deploy.yaml.template  fold-follower-deploy.yaml.template  fold-ingestor-deploy.yaml.template  fold-worker-deploy.yaml.template  follower-deployment.yaml  ingestor-deployment.yaml  namespace.yaml  worker-deployment.yaml
scripts/: database_ops.sh  interner_ops.sh  queue_depths.sh  run_hashset_knee.sh  run_seen_benches.sh  s3_ops.sh
src/: checkpoint.rs  checkpoint_manager.rs  disk_backed_queue.rs  disk_queue.rs  error.rs  feeder.rs  file_handler.rs  follower.rs  generation_store.rs  generation_store.rs.bak  generation_store.rs.bak2  generation_store.rs.bak3  generation_store.rs.bak4  generation_store.rs.bak6  interner.rs  intersector.rs  lib.rs  logical_coords.rs  main.rs  main.rs.bak5  memory_config.rs  metrics.rs  ortho.rs  ortho_database.rs  ortho_dbq.rs  ortho_hybrid.rs  ortho_log.rs  ortho_no_id.rs  processor.rs  queue.rs  repository.rs  s3_state.rs  seen_tracker.rs  seen_tracker_cached_runs.rs  seen_tracker_doubling_vec.rs  seen_tracker_doubling_vec_bloom.rs  seen_tracker_dual_vec.rs  seen_tracker_eytzinger_bloom.rs  seen_tracker_hashset_doubling.rs  seen_tracker_hashset_vec.rs  (+11 more)
tests/: archive_recovery_removes_heartbeat_test.rs  archive_recovery_removes_heartbeat_test.rs.bak  complete_lifecycle_test.rs  complete_lifecycle_test.rs.bak  comprehensive_recovery_test.rs  debug_diagonal_test.rs  debug_diagonal_test.rs.bak  diagonal_bug_isolation_test.rs  duplicate_in_shell_test.rs  e2e_full_flow.rs  empty_results_source_test.rs  end_to_end_test.rs  end_to_end_test.rs.bak  exact_bug_reproduction_test.rs  exact_save_flow_test.rs  filling_3x3_test.rs  heartbeat_timing_test.rs  heartbeat_timing_test.rs.bak  impacted_logic_test.rs  incomplete_recovery_test.rs  integration_test.rs  isolation_test.rs  merge_missing_results_test.rs  missing_results_test.rs  optimal_ortho_recovery_test.rs  optimal_ortho_recovery_test.rs.bak  path_mismatch_test.rs  path_to_3x3_test.rs  remap_shell_violation_test.rs  restore_path_mismatch_test.rs  resumability_test.rs  (+7 more)
