[package]
name = "fold"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
bloomfilter = "1.0"
fixedbitset = "0.5.7"
itertools = "0.12"
serde = { version = "1.0.219", features = ["derive"] }
rustc-hash = "1.1"
smallvec = "1.13"
sysinfo = "0.32"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

[[bench]]
name = "spatial_bench"
harness = false
path = "benches/spatial_bench.rs"

[[bench]]
name = "ortho_bench"
harness = false
path = "benches/ortho_bench.rs"

[[bench]]
name = "end_to_end_bench"
harness = false
path = "benches/end_to_end_bench.rs"

[[bench]]
name = "main_loop_bench"
harness = false
path = "benches/main_loop_bench.rs"

[[bench]]
name = "interner_bench"
harness = false
path = "benches/interner_bench.rs"

[[bench]]
name = "splitter_bench"
harness = false
path = "benches/splitter_bench.rs"

[[bench]]
name = "disk_queue_bench"
harness = false
path = "benches/disk_queue_bench.rs"

[[bench]]
name = "seen_tracker_bench"
harness = false
path = "benches/seen_tracker_bench.rs"
