[package]
name = "fold"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
bloomfilter = "1.0"
fixedbitset = "0.5.7"
itertools = "0.12"
serde = { version = "1.0.219", features = ["derive"] }
rustc-hash = "1.1"
smallvec = "1.13"
sysinfo = "0.32"
ratatui = "0.29"
crossterm = "0.28"
aws-config = "1"
aws-sdk-s3 = { version = "1", features = ["rustls"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
filetime = "0.2"

[[bench]]
name = "spatial_bench"
harness = false
path = "benches/spatial_bench.rs"

[[bench]]
name = "ortho_bench"
harness = false
path = "benches/ortho_bench.rs"

[[bench]]
name = "interner_bench"
harness = false
path = "benches/interner_bench.rs"

[[bench]]
name = "disk_backed_queue_bench"
harness = false
path = "benches/disk_backed_queue_bench.rs"

[[bench]]
name = "seen_tracker_bench"
harness = false
path = "benches/seen_tracker_bench.rs"

[[bench]]
name = "splitter_bench"
harness = false
path = "benches/splitter_bench.rs"

[[bench]]
name = "checkpoint_manager_bench"
harness = false
path = "benches/checkpoint_manager_bench.rs"

[[bench]]
name = "memory_config_bench"
harness = false
path = "benches/memory_config_bench.rs"

[[bench]]
name = "search_pipeline_bench"
harness = false
path = "benches/search_pipeline_bench.rs"
