[package]
name = "fold"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
bloomfilter = "1.0"
fixedbitset = "0.5.7"
itertools = "0.12"
serde = { version = "1.0.219", features = ["derive"] }
rustc-hash = "1.1"
hashbrown = { version = "0.14", features = ["serde"] }
nohash-hasher = "0.2"
smallvec = "1.13"
sysinfo = "0.32"
ratatui = "0.29"
crossterm = "0.28"
ctrlc = "3.4"
tempfile = "3.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
filetime = "0.2"

[[bench]]
name = "spatial_bench"
harness = false
path = "benches/spatial_bench.rs"

[[bench]]
name = "ortho_bench"
harness = false
path = "benches/ortho_bench.rs"

[[bench]]
name = "interner_bench"
harness = false
path = "benches/interner_bench.rs"

[[bench]]
name = "splitter_bench"
harness = false
path = "benches/splitter_bench.rs"

[[bench]]
name = "generation_store_bench"
harness = false
path = "benches/generation_store_bench.rs"
